Changed Scan Targets field to textarea on the edit and add overlays.

--- a/www/index.html
+++ b/www/index.html
@@ -147,8 +147,8 @@ All associated scans and findings will also be deleted!</p>
 	<tr>
 		<td><label for="add_scan_targets">Scan Targets: </label></td>
 		<td></td>
-		<td><input id="add_scan_targets" type="text" maxlength="100"
-			size="30" required /></td>
+		<td><textarea id="add_scan_targets" cols="22" rows="5" wrap="hard"
+				style="resize: none;"></textarea></td>
 	</tr>
 	<tr>
 		<td></td>
@@ -201,8 +201,8 @@ All associated scans and findings will also be deleted!</p>
 	<tr>
 		<td><label for="edit_scan_targets">Scan Targets: </label></td>
 		<td></td>
-		<td><input id="edit_scan_targets" type="text" maxlength="100"
-			size="30" required /></td>
+		<td><textarea id="edit_scan_targets" cols="22" rows="5" wrap="hard"
+				style="resize: none;"></textarea></td>
 	</tr>
 	<tr>
 		<td></td>
