--- a/www/index.html
+++ b/www/index.html
@@ -388,16 +388,16 @@ All associated findings will also be deleted!</p>
 New (<span class="count">0</span>) </span> <span id="cat-changed"
 	class="rt-collapse cat-not-selected" status="2"
 	title="These findings changed in the current or a previous scan and have not been rated yet">
-Changed (<span class="count">0</span>) </span> <span id="cat-gone"
+Changed (<span class="count">0</span>) </span> <span id="cat-open"
 	class="rt-collapse cat-not-selected" status="3"
-	title="These findings where present in a previous scan, but are currently no longer present and have not been reated yet">
-Gone (<span class="count">0</span>) </span> <span id="cat-open"
-	class="rt-collapse cat-not-selected" status="4"
 	title="These findings are currently present and have been rated as posing a security risk">
 Open (<span class="count">0</span>) </span> <span id="cat-no-issue"
-	class="rt-collapse cat-not-selected" status="5"
+	class="rt-collapse cat-not-selected" status="4"
 	title="These findings are currently present and have been rated not to pose a security risk">
-No Issue (<span class="count">0</span>) </span> <span id="cat-closed"
+No Issue (<span class="count">0</span>) </span> <span id="cat-gone"
+	class="rt-collapse cat-not-selected" status="5"
+	title="These findings where present in a previous scan, but are currently no longer present and have not been reated yet">
+Gone (<span class="count">0</span>) </span> <span id="cat-closed"
 	class="rt-collapse cat-not-selected" status="6"
 	title="These findings are currently no longer present and have been rated as closed">
 Closed (<span class="count">0</span>) </span> <span id="cat-masked"
