Updated the Status tool tips and which Status rating can be set based on the current Status.

--- a/www/index.html
+++ b/www/index.html
@@ -384,7 +384,7 @@ All associated findings will also be deleted!</p>
 <div id="catFstatus">
 <div id="centerCat"><span class="cat-label">Status:</span> <span
 	id="cat-none" class="rt-collapse cat-not-selected" status="1"
-	title="These findings have been discovered for the first time or after having disappeared from a previous scan and have not been rated yet">
+	title="These findings have been discovered for the first time or disappeared from a previous scan and have not been rated yet">
 New (<span class="count">0</span>) </span> <span id="cat-changed"
 	class="rt-collapse cat-not-selected" status="2"
 	title="These findings changed in the current or a previous scan and have not been rated yet">
@@ -393,13 +393,13 @@ Changed (<span class="count">0</span>) </span> <span id="cat-open"
 	title="These findings are currently present and have been rated as posing a security risk">
 Open (<span class="count">0</span>) </span> <span id="cat-no-issue"
 	class="rt-collapse cat-not-selected" status="4"
-	title="These findings are currently present and have been rated not to pose a security risk">
+	title="These findings are currently present and have been rated as not posing a security risk">
 No Issue (<span class="count">0</span>) </span> <span id="cat-gone"
 	class="rt-collapse cat-not-selected" status="5"
-	title="These findings where present in a previous scan, but are currently no longer present and have not been reated yet">
+	title="These findings where present in a previous scan, but are no longer present and have not been rated yet">
 Gone (<span class="count">0</span>) </span> <span id="cat-closed"
 	class="rt-collapse cat-not-selected" status="6"
-	title="These findings are currently no longer present and have been rated as closed">
+	title="These findings are no longer present and have been rated as closed">
 Closed (<span class="count">0</span>) </span> <span id="cat-masked"
 	class="cat-not-selected" status="99"
 	title="These findings have been rated such that they should be ignored">
