Removed max length for input field on workspace names

--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
 <fieldset>
 <h3>Add a new workspace</h3>
 <p><label>Workspace Name</label> <input id="add_ws_name" type="text"
-	name="name" pattern="[a-zA-Z0-9 ]{1,}" maxlength="30" /></p>
+	name="name" pattern="[a-zA-Z0-9 ]{1,}" /></p>
 <div class="buttons" style="padding: 15px 0;">
 <button type="submit" class="positive"><img src="img/add.png"
 	alt="" />Create</button>
@@ -97,7 +97,7 @@
 <fieldset>
 <h3>Edit workspace name</h3>
 <p><label>Workspace Name</label> <input id="edit_ws_name"
-	type="text" name="name" pattern="[a-zA-Z0-9 ]{1,}" maxlength="30" /></p>
+	type="text" name="name" pattern="[a-zA-Z0-9 ]{1,}" /></p>
 <div class="buttons" style="padding: 15px 0;">
 <button type="submit" class="positive">Change</button>
 <button type="reset" class="negative">Reset</button>
@@ -141,7 +141,7 @@ All associated scans and findings will also be deleted!</p>
 	<tr>
 		<td><label for="add_scan_parameters">Scan Parameters: </label></td>
 		<td>*</td>
-		<td><input id="add_scan_parameters" type="text" maxlength="100"
+		<td><input id="add_scan_parameters" type="text"
 			size="30" required /></td>
 	</tr>
 	<tr>
@@ -195,7 +195,7 @@ All associated scans and findings will also be deleted!</p>
 	<tr>
 		<td><label for="edit_scan_parameters">Scan Parameters: </label></td>
 		<td>*</td>
-		<td><input id="edit_scan_parameters" type="text" maxlength="100"
+		<td><input id="edit_scan_parameters" type="text"
 			size="30" required /></td>
 	</tr>
 	<tr>
