Fix for Ticket #10: testConfig is run during load of Seccubus, the results are given in the overlay, the overlay will show if there are any errors produced from testConfig or if the 'version' cookie is not present or the version has changed from what is stored in the cookie.

--- a/www/index.html
+++ b/www/index.html
@@ -69,10 +69,12 @@
 	title="Add findings to an Issue"> <img src="img/add.png" alt="" />I<u>s</u>sue
 </a></div>
 
-<div class="myoverlay" id="start">
+<div class="myoverlay" id="start" style="width: 700px;">
 	<div class="close">
-		<h3>Waiting for response from Up2date.pl ...</h3>
-		<p><br>(Click to close)</br></p>
+		<h3 id="up2date">Waiting for response from up2date.pl . . .</h3>
+		</br>
+		<h3 id="testConfig">Waiting for response from testConfig.pl . . .</h3>
+		<p></br>(Click to close)</p>
 	</div>
 </div>
 <div class="myoverlay" id="progress">
