Removed client side limitations of Scan names from the edit scan name form.

--- a/www/index.html
+++ b/www/index.html
@@ -183,8 +183,7 @@ All associated scans and findings will also be deleted!</p>
 	<tr>
 		<td><label for="edit_scan_name">Scan Name: </label></td>
 		<td>*</td>
-		<td><input id="edit_scan_name" type="text"
-			pattern="[a-zA-Z0-9 ]{1,}" maxlength="30" size="30" required /></td>
+		<td><input id="edit_scan_name" type="text" size="30" required /></td>
 	</tr>
 	<tr>
 		<td><label for="edit_scan_scanner">Scanner: </label></td>
