Add Nmap scanner to GUI https://www.pivotaltracker.com/story/show/17349295

--- a/www/index.html
+++ b/www/index.html
@@ -141,6 +141,7 @@ All associated scans and findings will also be deleted!</p>
 			<option value="NessusLegacy">Nessus Legacy (prior to v4.0)</option>
 			<option value="OpenVAS">OpenVAS</option>
 			<option value="Nikto">Nikto</option>
+			<option value="Nikto">Nmap</option>
 		</select></td>
 	</tr>
 	<tr>
