--- a/www/jmvc/seccubus/tabs/tabs.html
+++ b/www/jmvc/seccubus/tabs/tabs.html
@@ -13,7 +13,7 @@
 		<p>A tabs widget that creates 'activate' events.</p>
 		<h2>Demo</h2>
 		<p>Click the different tabs.</p>
-	    	<ul id='navTab'>
+	    <ul id='navTab'>
 			<li><a href='#findings'>Findings</a></li>
 			<li><a href='#scans'>Scans</a></li>
 			<li><a href='#workspaces'>Workspaces</a></li>
@@ -23,16 +23,20 @@
 		<div id='scans' class='tab'>The scans will go here</div>
 		<div id='findings' class='tab'>The findings will go here</div>
 
-		<h3>Disable Tab</h3>		
+		<h3>Disable Tab</h3>
+		<form>		
 		<input type="checkbox" name="disable" value="2" /> Workspaces<br />
 		<input type="checkbox" name="disable" value="1" /> Scans<br />
 		<input type="checkbox" name="disable" value="0" /> Findings<br />
+		</form>
 		
 		<script type='text/javascript' src='../../steal/steal.js?seccubus/tabs'></script>
 		
 		<script type='text/javascript' >
 				
 			$('#navTab').seccubus_tabs();
+
+			$("input").attr('checked', false);
 			
 			$("input").click( function( ev ) {
 				if (this.checked) {
