--- a/www/jmvc/seccubus/tabs/tabs.html
+++ b/www/jmvc/seccubus/tabs/tabs.html
@@ -14,20 +14,31 @@
 		<h2>Demo</h2>
 		<p>Click the different tabs.</p>
 	    <ul id='navTab'>
-			<li><a href='#findings'>Findings</a></li>
+	    	<li><a href='#workspaces'>Workspaces</a></li>
 			<li><a href='#scans'>Scans</a></li>
-			<li><a href='#workspaces'>Workspaces</a></li>
+			<li><a href='#findings'>Findings</a></li>
+			<li><a href='#issues'>Issues</a></li>
 		</ul>
 
 		<div id='workspaces' class='tab'>The workspaces will go here</div>
 		<div id='scans' class='tab'>The scans will go here</div>
 		<div id='findings' class='tab'>The findings will go here</div>
+		<div id='issues' class='tab'>The issues will go here</div>
 
 		<h3>Disable Tab</h3>
-		<form>		
-		<input type="checkbox" name="disable" value="2" /> Workspaces<br />
-		<input type="checkbox" name="disable" value="1" /> Scans<br />
-		<input type="checkbox" name="disable" value="0" /> Findings<br />
+		<form id="disable">		
+			<input type="checkbox" name="disable" value="0" /> Workspaces (tab index = 0)<br />
+			<input type="checkbox" name="disable" value="1" /> Scans (tab index = 1)<br />
+			<input type="checkbox" name="disable" value="2" /> Findings (tab index = 2)<br />
+			<input type="checkbox" name="disable" value="3" /> Issues (tab index = 3)<br />
+		</form>
+		
+		<h3>Hide Tab</h3>
+		<form id="hide">		
+			<input type="checkbox" name="disable" value="0" /> Workspaces (tab index = 0)<br />
+			<input type="checkbox" name="disable" value="1" /> Scans (tab index = 1)<br />
+			<input type="checkbox" name="disable" value="2" /> Findings (tab index = 2)<br />
+			<input type="checkbox" name="disable" value="3" /> Issues (tab index = 3)<br />
 		</form>
 		
 		<script type='text/javascript' src='../../steal/steal.js?seccubus/tabs'></script>
@@ -36,21 +47,34 @@
 				
 			$('#navTab').seccubus_tabs();
 
-			$("input").attr('checked', false);
+			$('#disable input').attr('checked', false);
 			
-			$("input").click( function( ev ) {
+			$('#disable input').click( function( ev ) {
 				if (this.checked) {
 					if ( $('#navTab').children(':eq('+this.value+')').hasClass('active') ) {
 						console.warn("This tab is currently active and cannot be disabled.");
 						this.blur();
 						ev.preventDefault();
-						return false;
 					}
-
-					$('#navTab').seccubus_tabs("disable", this.value);
+					else $('#navTab').seccubus_tabs("disable", this.value);
 				}
 				else 				
 					$('#navTab').seccubus_tabs("enable", this.value);
+			})
+			
+			$('#hide input').attr('checked', false);
+
+			$('#hide input').click ( function ( ev ) {
+				if (this.checked) {
+					if ( $('#navTab').children(':eq('+this.value+')').hasClass('active') ) {
+						console.warn("This tab is currently active and cannot be hidden.");
+						this.blur();
+						ev.preventDefault();
+					}
+					else $('#navTab').seccubus_tabs("hide", this.value);
+				}
+				else
+					$('#navTab').seccubus_tabs("show", this.value);
 			})
 			
 		</script>
