Updated Seccubus JMVC, updated css to match old css and modified display of tabs.

--- a/www/jmvc/seccubus/seccubus.html
+++ b/www/jmvc/seccubus/seccubus.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-	"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
+
 <html lang="en">
 	<head>
 		<title>Seccubus 2</title>
 	</head>
 	<body>
+	<header>
 		<div class="shell">
 			<div id="header-logo"><img src="img/logo.png" alt="" height="50"width="50" /></div>
 			<div id="header-top">
@@ -12,7 +13,7 @@
 				<h2>Automated vulnerability scanning and reporting</h2>
 				<nav id="top-nav"> <a href="#">Settings</a> <span> | </span> <ahref="#">Help</a> </nav>
 			</div>
-			<div id="header-bottom">
+			<div id="header-bottom"><nav id="main-nav">
 				<ul id='navTab'>
 					<li><a href="#workspaces">Workspaces</a></li>
 					<li><a href="#scans">Scans</a></li>
@@ -20,20 +21,22 @@
 					<li><a href="#issues">Issues</a></li>
 					<li><a href="#reports">Reports</a></li>
 				</ul>
-			</div>
+			</nav></div>
 		</div>
-		
+	</header>
+	<div class="shell">
 		<div id='workspaces' class='tab'>The workspaces will go here</div>
 		<div id='scans' class='tab'>The scans will go here</div>
 		<div id='findings' class='tab'>The findings will go here</div>
 		<div id='issues' class='tab'>The Issues will go here</div>
-		<div id='reports' class='tab'>The Reports will go here</div>	    
+		<div id='reports' class='tab'>The Reports will go here</div>
+	</div>	    
 
 
-		<script type='text/javascript' src='../steal/steal.js?seccubus,development'>
+	<script type='text/javascript' src='../steal/steal.js?seccubus,development'>
 
-			$('#navTab').seccubus_tabs();
+		$('#navTab').seccubus_tabs();
 	   	 
-        </script>
+    </script>
 	</body>
 </html>
