Added status tab and trying to fix unit tests

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -18,6 +18,7 @@
 	 <div id="header-bottom">
 	   <nav id="main-nav">
 	     <ul id='navTab'>
+	       <li><a href="#up2date">Status</a></li>
 	       <li><a href="#workspaces">Workspaces</a></li>
 	       <li><a href="#scans">Scans</a></li>
 	       <li><a href="#findings">Findings</a></li>
@@ -29,6 +30,7 @@
        </div>
      </header>
      <div class="shell">
+       <div id='up2date' class='tab'>The application status will go here</div>
        <div id='workspaces' class='tab'>The workspaces will go here</div>
        <div id='scans' class='tab'>The scans will go here</div>
        <div id='findings' class='tab'>The findings will go here</div>
