Added version checking and configuration testing on fixtures

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -30,7 +30,12 @@
        </div>
      </header>
      <div class="shell">
-       <div id='up2date' class='tab'>The application status will go here</div>
+       <div id='up2date' class='tab'><br>
+         <div id='up_to_dates'>Up 2 date goes here</div>
+	 <br>
+         <hr>
+         <div id='config_items'>Coniguration items test go here</div>
+       </div>
        <div id='workspaces' class='tab'>The workspaces will go here</div>
        <div id='scans' class='tab'>The scans will go here</div>
        <div id='findings' class='tab'>The findings will go here</div>
