Use real api call for config_item

--- a/jmvc/seccubus/config_item/list/list.html
+++ b/jmvc/seccubus/config_item/list/list.html
@@ -27,8 +27,8 @@
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
-			//steal('seccubus/config_item/list',function(){
-			steal('seccubus/config_item/list','seccubus/fixtures',function(){
+			steal('seccubus/config_item/list',function(){
+			//steal('seccubus/config_item/list','seccubus/fixtures',function(){
 				
 				$('#config_items').seccubus_config_item_list();
 				
