--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -42,7 +42,7 @@
        <div id='issues' class='tab'>The Issues will go here</div>
        <div id='reports' class='tab'>The Reports will go here</div>
      </div>
-     <script type='text/javascript' src='../steal/steal.js?seccubus'>
+     <script type='text/javascript' src='../steal/steal.production.js?seccubus'>
      </script>
   </body>
 </html>
