Must have a favicon!

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>Seccubus 2</title>
+    <link rel="shortcut icon" href="img/favicon.png" />
   </head>
   <body>
     <header>
