--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -37,7 +37,9 @@
          <hr>
          <div id='config_items'>Coniguration items test go here</div>
        </div>
-       <div id='workspaces' class='tab'>The workspaces will go here</div>
+       <div id='workspaces' class='tab'><br>
+         <div id='workspace_list'>Workspacelist goes here</div>
+       </div>
        <div id='scans' class='tab'>The scans will go here</div>
        <div id='findings' class='tab'>The findings will go here</div>
        <div id='issues' class='tab'>The Issues will go here</div>
