Workspaces table is shown on workspace tab

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -38,7 +38,7 @@
          <div id='config_items'>Coniguration items test go here</div>
        </div>
        <div id='workspaces' class='tab'><br>
-         <div id='workspace_list'>Workspacelist goes here</div>
+         <div id='workspace_table'>Workspaces table goes here</div>
        </div>
        <div id='scans' class='tab'>The scans will go here</div>
        <div id='findings' class='tab'>The findings will go here</div>
