Create funciton uses real data now

--- a/jmvc/seccubus/workspace/table/table.html
+++ b/jmvc/seccubus/workspace/table/table.html
@@ -26,8 +26,10 @@
 
 				$('#create').click(function(){
 					new Seccubus.Models.Workspace({
-						name: "Grilled Cheese",
-						description: "Bread and Cheese"
+						id :            "9999",
+						Name :          "Client 9999",
+						ScanCount :     "9999",
+						LastScan :      "2099-09-09 09:09:09"
 					}).save();
 				})
 			})
