Bare scaffolding of Seccubus.Models.Scan

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -41,27 +41,6 @@
 	 </div>
        </div>
 
-       <div id='workspaces' class='tab'>
-         <div class='full'>
-           <div id='workspace_table'>Workspaces table goes here</div>
-	 </div>
-       </div>
-
-       <div id='scans' class='tab'>
-         <div class='left'>
-           <div id='workspace_selector_scans'>
-	     <select>
-	       <option>Workspace selector</option>
-	     </select>
-	   </div>
-	 </div>
-	 <div class='main'>
-	   <div id='scan_table'>
-	     Datatable with scans will go here
-	   </div>
-	 </div>
-       </div>
-
        <div id='findings' class='tab'>
          <div class='left'>
 	   Workspace:<br>
@@ -99,6 +78,28 @@
 	   <div id='issue_table'>
 	     Datatable with issues will go here
 	   </div>
+	 </div>
+       </div>
+
+       <div id='scans' class='tab'>
+         <div class='left'>
+	   Workspace:<br>
+           <div id='workspace_selector_scans'>
+	     <select>
+	       <option>Workspace selector</option>
+	     </select>
+	   </div>
+	 </div>
+	 <div class='main'>
+	   <div id='scan_table'>
+	     Datatable with scans will go here
+	   </div>
+	 </div>
+       </div>
+
+       <div id='workspaces' class='tab'>
+         <div class='full'>
+           <div id='workspace_table'>Workspaces table goes here</div>
 	 </div>
        </div>
 
