Mock scan selection list is working

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -50,8 +50,8 @@
 	     </select>
 	     <br>&nbsp;
 	   </div>
-	   <div id='scan_multiselector_fidings'>
-	     Scan:<br>
+	   Scans:<br>
+	   <div id='scan_multiselector_findings'>
 	     <select MULTIPLE size=20>
 	       <option>Select a workspace to start</option>
 	     </select>
