--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -44,18 +44,15 @@
        <div id='findings' class='tab'>
          <div class='left'>
 	   Workspace:<br>
-           <div id='workspace_selector_findings'>
-	     <select>
-	       <option>Workspace selector</option>
-	     </select>
-	     <br>&nbsp;
-	   </div>
-	   Scans:<br>
-	   <div id='scan_multiselector_findings'>
-	     <select MULTIPLE size=20>
-	       <option>Select a workspace to start</option>
-	     </select>
-	   </div>
+           <select class='left' id='workspace_selector_findings'>
+	     <option>Workspace selector</option>
+	     <option>----</option>
+	     <option>This is where we load the workspace selector</option>
+	   </select>
+	   <br>Scans:<br>
+	   <select class='left' id='scan_multiselector_findings' MULTIPLE size=20>
+	     <option>Select a workspace to start</option>
+	   </select>
 	 </div>
 	 <div class=main>
 	   <div id='status_selector'>No workspace selected...</div>
@@ -68,27 +65,31 @@
        <div id='issues' class='tab'>
 	 <div class='left'>
 	   Workspace:<br>
-           <div id='workspace_selector_issues'>
-	     <select>
-	       <option>Workspace selector</option>
-	     </select>
-	   </div>
+           <select class='left' id='workspace_selector_issues'>
+	     <option>Workspace selector</option>
+	     <option>----</option>
+	     <option>This is where we load the workspace selector</option>
+	   </select>
 	 </div>
 	 <div class='main'>
-	   <div id='issue_table'>
-	     Datatable with issues will go here
-	   </div>
+	   <table id='issue_table'>
+	     <thead> <tr> <th>a</th> <th>b</th> <th>c</th> </tr> </thead>
+	     </tbody> <tr> <th>1</th> <th>3</th> <th>a</th> </tr>
+	       <tr> <th>2</th> <th>2</th> <th>b</th> </tr>
+	       <tr> <th>3</th> <th>1</th> <th>c</th> </tr>
+	     </tbody>
+	   </table>
 	 </div>
        </div>
 
        <div id='scans' class='tab'>
          <div class='left'>
 	   Workspace:<br>
-           <div id='workspace_selector_scans'>
-	     <select>
-	       <option>Workspace selector</option>
-	     </select>
-	   </div>
+           <select class='left' id='workspace_selector_scans'>
+	     <option>Workspace selector</option>
+	     <option>----</option>
+	     <option>This is where we load the workspace selector</option>
+	   </select>
 	 </div>
 	 <div class='main'>
 	   <div id='scan_table'>
@@ -99,7 +100,13 @@
 
        <div id='workspaces' class='tab'>
          <div class='full'>
-           <div id='workspace_table'>Workspaces table goes here</div>
+           <table id='workspace_table'>
+	     <thead> <tr> <th>a</th> <th>b</th> <th>c</th> </tr> </thead>
+	     </tbody> <tr> <th>1</th> <th>3</th> <th>a</th> </tr>
+	       <tr> <th>2</th> <th>2</th> <th>b</th> </tr>
+	       <tr> <th>3</th> <th>1</th> <th>c</th> </tr>
+	     </tbody>
+	   </table>
 	 </div>
        </div>
 
