Brought scan selector in line with intended jmvc used as well

--- a/jmvc/seccubus/scan/select/select.html
+++ b/jmvc/seccubus/scan/select/select.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 	    <h1>Seccubus.Scan.Select Demo</h1>
-		<ul id='scans'></ul>
+		<select id='scans'></select>
 		<a href='javascript://' id='create'>Create Scan</a>
 		<script type='text/javascript' 
                 src='../../../steal/steal.js'>
