Workspace selectors and scan selectors are now interacting

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -44,13 +44,13 @@
        <div id='findings' class='tab'>
          <div class='left'>
 	   Workspace:<br>
-           <select class='left' id='workspace_selector_findings'>
+           <select class='left workspaceSelector' id='workspace_selector_findings'>
 	     <option>Workspace selector</option>
 	     <option>----</option>
 	     <option>This is where we load the workspace selector</option>
 	   </select>
 	   <br>Scans:<br>
-	   <select class='left' id='scan_multiselector_findings' MULTIPLE size=20>
+	   <select class='left scanSelector' id='scan_multiselector_findings' MULTIPLE size=20>
 	     <option>Select a workspace to start</option>
 	   </select>
 	 </div>
@@ -65,7 +65,7 @@
        <div id='issues' class='tab'>
 	 <div class='left'>
 	   Workspace:<br>
-           <select class='left' id='workspace_selector_issues'>
+           <select class='left workspaceSelector' id='workspace_selector_issues'>
 	     <option>Workspace selector</option>
 	     <option>----</option>
 	     <option>This is where we load the workspace selector</option>
@@ -85,7 +85,7 @@
        <div id='scans' class='tab'>
          <div class='left'>
 	   Workspace:<br>
-           <select class='left' id='workspace_selector_scans'>
+           <select class='left workspaceSelector' id='workspace_selector_scans'>
 	     <option>Workspace selector</option>
 	     <option>----</option>
 	     <option>This is where we load the workspace selector</option>
