Basic findings table integrated into seccubus display

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -56,9 +56,9 @@
 	 </div>
 	 <div class=main>
 	   <div id='status_selector'>No workspace selected...</div>
-	   <div id='finding_table'>
-	     Datatable with findings will go here
-	   </div>
+	   <table id='finding_table'>
+	     <tr><td>Datatable with findings will go here</td></tr>
+	   </table>
 	 </div>
        </div>
 
