Status table now takes the selected status in account

--- a/jmvc/seccubus/finding/status_table/status_table.html
+++ b/jmvc/seccubus/finding/status_table/status_table.html
@@ -11,6 +11,7 @@
 	    tr.sev_2 { background-color: yellow; }
 	    tr.sev_3 { background-color: green; }
 	    tr.sev_4 { background-color: blue; }
+	    button.selected { font-weight: bold; }
         </style>
 	</head>
 	<body>
