Integrated status buttons into seccubus

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -55,7 +55,9 @@
 	   </select>
 	 </div>
 	 <div class=main>
-	   <div id='status_selector'>No workspace selected...</div>
+	   <table id='status_buttons'>
+	     Status buttons will go here
+	   </table>
 	   <table id='finding_table'>
 	     <tr><td>Datatable with findings will go here</td></tr>
 	   </table>
