Improved error handling workspace and scan selector

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -56,7 +56,7 @@
 	 </div>
 	 <div class=main>
 	   <table id='status_buttons'>
-	     Status buttons will go here
+	     <tr><td>Status buttons will go here</td></tr>
 	   </table>
 	   <table id='finding_table'>
 	     <tr><td>Datatable with findings will go here</td></tr>
