--- a/jmvc/seccubus/finding/status_table/status_table.html
+++ b/jmvc/seccubus/finding/status_table/status_table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Seccubus.Finding.Table</title>
+		<title>Seccubus.Finding.StatusTable</title>
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
@@ -15,7 +15,7 @@
         </style>
 	</head>
 	<body>
-	    <h1>Seccubus.Finding.Table Demo</h1>
+	    <h1>Seccubus.Finding.StatusTable Demo</h1>
 		Workspace: <select id='workspace'></select><br>
 		Scan(s):<br>
 		<select multiple id='scans' size=8></select><br><br>
