Intergrated filtering on host, hostname, port and plugin into Seccubus

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -58,6 +58,7 @@
 	   <table id='status_buttons'>
 	     <tr><td>Status buttons will go here</td></tr>
 	   </table>
+	   <div id='filters'>Filters will go here</div>
 	   <table id='finding_table'>
 	     <tr><td>Datatable with findings will go here</td></tr>
 	   </table>
