Basic sorting of the findings table

--- a/jmvc/seccubus/finding/table/table.html
+++ b/jmvc/seccubus/finding/table/table.html
@@ -7,10 +7,13 @@
             .error {border: solid 1px red;}
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
-	    tr.sev_1 { background-color: red; }
-	    tr.sev_2 { background-color: yellow; }
-	    tr.sev_3 { background-color: green; }
-	    tr.sev_4 { background-color: blue; }
+	    .asc { background: url("img/sort_asc.png") no-repeat scroll right center ; padding-right: 20px;}
+	    .desc { background: url("img/sort_desc.png") no-repeat scroll right center ;padding-right: 20px; }
+	    .both { background: url("img/sort_both.png") no-repeat scroll right center ;padding-right: 20px; }
+	    tr.sev_1 { background-color: red; };
+	    tr.sev_2 { background-color: yellow; };
+	    tr.sev_3 { background-color: green; };
+	    tr.sev_4 { background-color: blue; };
         </style>
 	</head>
 	<body>
