--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -55,9 +55,10 @@
 	   </select>
 	 </div>
 	 <div class=main>
-	   <table id='status_buttons'>
-	     <tr><td>Status buttons will go here</td></tr>
-	   </table>
+	   <div id='status_buttons'>
+	     Status buttons will go here
+	   </div>
+	   <br>
 	   <div id='filters'>Filters will go here</div>
 	   <br>
 	   <table id='finding_table'>
