--- a/jmvc/seccubus/finding/status/funcunit.html
+++ b/jmvc/seccubus/finding/status/funcunit.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
-        <title>Seccubus.Finding.StatusTable FuncUnit Test</title>
-		<script type='text/javascript' src='../../../steal/steal.js?seccubus/finding/status_table/status_table_test.js'></script>
+        <title>Seccubus.Finding.Status FuncUnit Test</title>
+		<script type='text/javascript' src='../../../steal/steal.js?seccubus/finding/status/status_test.js'></script>
     </head>
     <body>
 
-        <h1 id="qunit-header">Seccubus.Finding.StatusTable Test Suite</h1>
+        <h1 id="qunit-header">Seccubus.Finding.Status Test Suite</h1>
     	<h2 id="qunit-banner"></h2>
     	<div id="qunit-testrunner-toolbar"></div>
     	<h2 id="qunit-userAgent"></h2>
