Fixtures are working again ....

--- a/jmvc/seccubus/scan/select/select.html
+++ b/jmvc/seccubus/scan/select/select.html
@@ -28,7 +28,9 @@
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
-			steal('seccubus/scan/select','seccubus/fixtures',function(){
+		steal('seccubus/scan/select',
+			'seccubus/fixtures',
+			function(){
 				
 				$('#scans').seccubus_scan_select();
 				
