--- a/jmvc/seccubus/finding/bulkedit/bulkedit.html
+++ b/jmvc/seccubus/finding/bulkedit/bulkedit.html
@@ -23,13 +23,13 @@
 		Scan(s):<br>
 		<select multiple id='scans' size=8></select><br><br>
 		Status:
-		<a href='javascript://' class='setStatus' value=1>1</a>
-		<a href='javascript://' class='setStatus' value=2>2</a>
-		<a href='javascript://' class='setStatus' value=3>3</a>
-		<a href='javascript://' class='setStatus' value=4>4</a>
-		<a href='javascript://' class='setStatus' value=5>5</a>
-		<a href='javascript://' class='setStatus' value=6>6</a>
-		<a href='javascript://' class='setStatus' value=99>99</a><br>
+		<a href='javascript://' class='setStatus' value=1>1 New</a>
+		<a href='javascript://' class='setStatus' value=2>2 Changed</a>
+		<a href='javascript://' class='setStatus' value=3>3 Open</a>
+		<a href='javascript://' class='setStatus' value=4>4 No Issue</a>
+		<a href='javascript://' class='setStatus' value=5>5 Gone</a>
+		<a href='javascript://' class='setStatus' value=6>6 Closed</a>
+		<a href='javascript://' class='setStatus' value=99>99 MASKED</a><br>
 		<br>
 		<form id='bulkedit'></form>
 		<br>
@@ -77,10 +77,18 @@
 					gui_state.attr("status",s);
 				});
 
-				$('#bulkedit').seccubus_finding_bulkedit();
+				$('#bulkedit').seccubus_finding_bulkedit({
+					workspace	: gui_state.attr("workspace"),
+					status		: gui_state.attr("status"),
+				});
 
 				function update_findings() {
 					$('#findings').seccubus_finding_table({
+						workspace	: gui_state.attr("workspace"),
+						scans		: gui_state.attr("scans"),
+						status		: gui_state.attr("status"),
+					});
+					$('#bulkedit').seccubus_finding_bulkedit({
 						workspace	: gui_state.attr("workspace"),
 						scans		: gui_state.attr("scans"),
 						status		: gui_state.attr("status"),
