--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -61,6 +61,8 @@
 	   <br>
 	   <div id='filters'>Filters will go here</div>
 	   <br>
+	   <form id='finding_bulkedit'>Bulk update will go here</form>
+	   <br>
 	   <table id='finding_table'>
 	     <tr><td>Datatable with findings will go here</td></tr>
 	   </table>
