Seccubus.Scan.List integration

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -99,9 +99,10 @@
 	   </select>
 	 </div>
 	 <div class='main'>
-	   <div id='scan_table'>
-	     Datatable with scans will go here
-	   </div>
+	   Scans in this workspace: <a href='javascript://' class='createScan'>Add</a>
+	   <ul id='scan_list' class="scanList">
+	     <li>list with scans will go here</li>
+	   </ul>
 	 </div>
        </div>
 
