Made the modal dialog more slick

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -125,13 +125,16 @@
        </div>
 
      </div>
+     <!-- This is where the modal diaglog windows live -->
      <div id="createWorkspaceDialog" class='hidden'>
+       <h1>Please provide the details for a new workspace</h1>
        <form id="createWorkspace">
          Room for modal creatWorkspace
        </form>
      </div>
      <div id="modalDialog">
      </div>
+     <!-- Get the javascript out -->
      <script type='text/javascript' src='../steal/steal.js?seccubus'>
      </script>
   </body>
